# dna-etl-framework

./: .eslintrc.js  .gitignore  .gitleaks.toml  .npmrc  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  axpo-ts-dna-etl-framework-1.0.0.tgz  build.sh  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.cfg  tsconfig.json
.azure-pipelines/: azure-pipelines.yml
.github/workflows/: ci.yml  publish.yml
_migrations/: migration_script.py  readme.md
_migrations/bronze/advanced_analytics_shared/: 0001_rename_audit_cols_fact_france_timeseries_table.py  0001_rename_audit_cols_too_timeseries_latest_table.py
_migrations/bronze/ckw/: 0001_drop_tables.py  0002_remove_license_attributes_table.py
_migrations/bronze/data_governance/: 0001_change_data_type_bigint_data_quality_metrics_table.py  0001_rename_audit_cols_data_dictionary_table.py  0001_rename_audit_cols_data_quality_metrics_table.py  0002_drop_managed_data_dictionary_table.py  0003_enable_auto_optimization_catalog.py  0004_update_lpi_function.py
_migrations/bronze/dna_adoption_metrics/: 0001_rename_add_audit_columns_pk_tables.py  0002_create_active_user.py  0003_create_data_owner.py  0004_create_query_count.py  0005_create_source_system.py  0006_create_table_count.py  0007_create_usage_dbu.py
_migrations/bronze/ebx/: 0001_rename_audit_cols_commodity_table.py  0001_rename_audit_cols_countryext_table.py  0001_rename_audit_cols_currency_table.py  0001_rename_audit_cols_language_table.py  0001_rename_audit_cols_unit_table.py  0001_rename_audit_cols_unittype_table.py  0002_add_primary_keys_commodity_table.py  0002_add_primary_keys_countryext_table.py  0002_add_primary_keys_currency_table.py  0002_add_primary_keys_language_table.py  0002_add_primary_keys_unit_table.py  0002_add_primary_keys_unittype_table.py  0003_recreate_tables.py  0004_recreate_tables.py  0005_recreate_commodity_table.py  0006_recreate_legal_entity_table.py  0007_delete_bronze_tables.py
_migrations/bronze/elviz/: 0001_remove_deprecated_schemas.py
_migrations/bronze/entsoe/: 0001_entsoe_liquid_clustering.py
_migrations/bronze/jao/: 0001_truncate_auction.py
_migrations/bronze/mdlm/: 0001_change_primary_keys_lpi_entitlements_table.py  0002_snake_case_mdlm_bronze_tables.py
_migrations/bronze/mds/: 0001_rename_mds_attributes_table.py  0002_drop_mds_attributes_table.py  0002_drop_mds_entso_curves_balancing.py  0003_drop_mds_attributes_volume.py  0004_rename_FCR_Capacity_Prices_table.py  0005_delete_old_mdos_mdo_attributes_table.py  0005_rename_aFRR_Capacity_Prices_table.py  0006_rename_aFRR_activation_price_table.py  0007_rename_Spot_day_ahead_FR_table.py  0008_rename_Imbalance_Price_France_table.py  0009_rename_precipitation_noaa_table.py  0010_union_production_meteologica_wind_and_solar_tables.py  0011_drop_production_wind_meteologica_table.py  0012_drop_production_solar_meteologica_table.py  0013_rename_audit_cols_amprion_curves_cross_border_auction_result_table.py  0013_rename_audit_cols_entso_curves_balancing_table.py  0013_rename_audit_cols_epex_pos_curves_auction_clearing_table.py  0013_rename_audit_cols_mdo_attributes_table.py  0013_rename_audit_cols_meteolog_curves_power_production_table.py  0013_rename_audit_cols_noaa_curves_precipitation_table.py  0013_rename_audit_cols_rte_curves_afrr_activated_table.py  0013_rename_audit_cols_rte_curves_balancing_reserves_table.py  0014_add_primary_keys_amprion_curves_cross_border_auction_result_table.py  0014_add_primary_keys_entso_curves_balancing_table.py  0014_add_primary_keys_epex_pos_curves_auction_clearing_table.py  0014_add_primary_keys_meteolog_curves_power_production_table.py  0014_add_primary_keys_noaa_curves_precipitation_table.py  0014_add_primary_keys_rte_curves_afrr_activated_table.py  0014_add_primary_keys_rte_curves_balancing_reserves_table.py  0015_alter_pk_egl_che_curve_price_modelled.py  0015_mds_attributes_add_new_columns.py  0016_delete_irrelevant_mds_price_modelled_attributes.py  0017_include_new_columns_mdo_attributes.py  0018_mds_bronze_schema_changes.py  0019_change_delivery_start_end_datatype.py
_migrations/bronze/meteo_team/: 0001_rename_audit_cols_city_attributes_table.py
_migrations/bronze/meteomatics/: 0001_rename_audit_cols_geopotential_height_500hpa_m_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_msl_pressure_hpa_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_precip_24h_mm_mix_p1d_table.py  0001_rename_audit_cols_t_mean_2m_24h_c_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_t_mean_850hpa_24h_c_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_wind_speed_10hpa_ms_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_wind_speed_200hpa_ms_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_wind_speed_u_10hpa_ms_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_wind_speed_u_200hpa_ms_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_wind_speed_v_10hpa_ms_ecmwf_era5_p1d_table.py  0001_rename_audit_cols_wind_speed_v_200hpa_ms_ecmwf_era5_p1d_table.py  0002_add_primary_keys_geopotential_height_500hpa_m_ecmwf_era5_p1d_table.py  0002_add_primary_keys_msl_pressure_hpa_ecmwf_era5_p1d_table.py  (+14 more)
dna_etl/: __init__.py  cli.py  core.py
docs/source/: conf.py  development.rst  howtos.rst  index.rst  sphinx.rst
examples/: basic_pipeline.py  sample_config.yaml
src/: index.ts
src/__tests__/: index.test.ts
src/data_model/: __init__.py  abstract_table_model.py  abstract_unity_catalog_data_object_reference.py  file_volume_identifier.py  static_table_model.py  static_view_model.py  table_identifier.py  view_identifier.py
src/data_platform/: logger.py
src/etl/: common.py  etl_task.py
tests/: entrypoint.py  pytest_databricks.py  test_core.py
tests/integration/: conftest.py  test_data_dictionary.py  test_databricks_tasks.py  test_dqx_tasks.py
tests/unit/: conftest.py  test_alerts_tasks.py  test_catalog_utilities.py  test_dlt_functions.py  test_ingestion.py  test_ingestion_volue.py  test_reader_tasks.py  test_schema_tasks.py  test_table_tags.py  test_task_authentication.py  test_transform_tasks.py  test_writer_tasks.py
(+666 files in other folders)
