[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-etl"
dynamic = ["version"]
description = "DNA ETL Framework providing standardized patterns, components, and tooling to build reliable, observable, and scalable ETL pipelines at Axpo"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Axpo Trading & Sales Ltd", email = "support@axpo.com" }
]
maintainers = [
    { name = "Axpo Trading & Sales Ltd", email = "support@axpo.com" }
]
keywords = ["etl", "data", "pipeline", "axpo", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.0.0; python_version<'3.10'",
]

[project.scripts]
dna-etl = "dna_etl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/axpo-ts/dna-etl-framework"
Repository = "https://github.com/axpo-ts/dna-etl-framework"
Issues = "https://github.com/axpo-ts/dna-etl-framework/issues"
Documentation = "https://github.com/axpo-ts/dna-etl-framework#readme"

[tool.setuptools_scm]
# Enable setuptools_scm for automatic versioning from git tags
write_to = "dna_etl/_version.py"
fallback_version = "0.0.0+unknown"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["dna_etl*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dna_etl"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=dna_etl",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]