[project]
name = "dna_etl_framework"
version = "0.0.1.dev5"
description = "Config-driven runner for generic ETL tasks."
authors = [
    { name = "Jared Magrath", email = "jared.magrath@colibridigital.io" },
    { name = "Satya Vegesna", email = "satya.vegesna@colibridigital.io" },
    { name = "Radu Nicolau", email = "radu.nicolau@colibridigital.io" },
    { name = "Robert Blowers", email = "robert.blowers@colibridigital.io" },
    { name = "Ben Cheeld", email = "ben.cheeld@colibridigital.io" },
    { name = "Sharmila Sankaralingam", email = "sharmila.sankar@colibridigital.io" },
    { name = "Lakshmi Podapati", email = "Lakshmi.Podapati@colibridigital.io" },
    { name = "Marius Cautun", email = "marius.cautun@colibridigital.io" }
]
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20241016",
    "volue-insight-timeseries~=1.2.3",
    "numpy<2",  # Downgraded due to compatibility with databricks
    "pre-commit>=4.2.0",
    "xarray>=2024.10.0",
    "h5netcdf>=1.4.1",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241009",
    "pyarrow==19.0.0",
    "types-python-dateutil>=2.9.0.20241206",
    "nest-asyncio==1.6.0",
    "smbprotocol==1.15.0",
    "databricks-labs-dqx==0.3.0",
    "tenacity==9.1.2",
    "tqdm>=4.67.1",
    "httpx[http2]>=0.28.1",
    "h2>=4.2.0",
    "openpyxl>=3.1.5",
    "pem>=23.1.0",
    "tempfile2>=0.1.2",
    "entsoe-py>=0.7.8",
    "opentelemetry-api~=1.38.0",
    "opentelemetry-sdk~=1.38.0",
    "opentelemetry-exporter-otlp~=1.38.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b44,<2.0.0",
]

requires-python = "<3.13a0,>=3.12.0"
readme = "README.md"
license = { text = "Propriety" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
ruff = "ruff check ./src ./tests --fix"
format = "ruff format ."
sqlfluff = "sqlfluff fix ."
sqlfluff_check = "sqlfluff lint ."
lint = { composite = ["format", "ruff"] }
ruff_check = "ruff check ./src ./tests"
format_check = "ruff format --check ."
lint_check = {composite = ["ruff_check", "sqlfluff_check"]}
unit_test = "pytest -v tests/unit --cov=catalix --cov-report=html"
module_unit_test = "pytest -v tests/unit/test_dlt_functions.py --cov=catalix.test_dlt_functions --cov-report=html"
one_unit_test = "pytest -v tests/unit -k 'test_create_schema_task' --cov=catalix --cov-report=html"
coverage_check = "coverage report -m --fail-under=80"

[tool.pdm.group.test.dependencies]
pytest = ">=8.2.2"
pytest-cov = ">=5.0.0"


[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"
pythonpath = [".", "src"]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]

exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

ignore_errors = true
omit = [
    "*/__init__.py",
    "setup.py",
    "common.py",
    # "*/task_runner.py",  Do we want to omit?
    # "*/task_utility.py", # Do we want to omit?
]

#######################
## Ruff Configuration ##
#######################
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/data_model/silver",
]

line-length = 120 # Use a line length of 120 characters.
target-version = "py311" # Target Python 3.11.

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto" # Like Black, automatically detect the appropriate line ending.
docstring-code-format = true # apply formatting rules to the code within docstrings
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow unused variables when underscore-prefixed.
fixable = ["ALL"] # Allow fix for all enabled rules (when `--fix`) is provided.
unfixable = []
select = [
    "E", # enable pycodestyle rules
    "W", # enable pycodestyle rules
    "F", # enable pyflake rules
    "I", # enable import rules
    "D", # enable docstring rules
    "N", # enable naming rules
    "UP", # enable pyupgrade rules
    "ANN", # enable type annotation rules
    "LOG", # enable logging rules
    "PT", # enable pytest rules
    "PERF", # enable performance rules
    "FURB", # enable refurb rules
    "RUF", # enable ruff rules
]
ignore = [
    "D100", # missing module docstring
    "D104", # missing docstring in public package
    "ANN401", # Any type annotation for return
    ]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # Ignore docstring and annotation rules in all directories named `tests`.
"__init__.py" = ["ALL"] # Ignore all rules in `__init__.py` files.
"src/data_model/**" = ["E501"] # Ignore line-length for silver table models
[tool.ruff.lint.pydocstyle]
convention = "google" # Use the Google docstring style.

[tool.sqlfluff.core]
dialect = "databricks"
sql_file_exts = ".sql"
max_line_length = 120
templater = "placeholder"
exclude_rules = [
"ambiguous.column_count",
"structure.column_order",
"references.special_chars",
"capitalisation.identifiers",
"references.consistent",
"AL09" # aliasing.self_alias.column
]
[tool.sqlfluff.indentation]
allow_implicit_indents = true
[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"
[tool.sqlfluff.rules.aliasing.column]
aliasing = "explicit"
[tool.sqlfluff.rules.aliasing.length]
min_alias_length = 3
[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"
[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "upper"
[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "upper"
[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "upper"
[tool.sqlfluff.templater.placeholder]
param_style = "dollar"

[dependency-groups]
local = [
    "pre-commit>=3.7.1",
    "types-pyyaml==6.0.12.20240311",
    "ruff==0.11.6",
    "sqlfluff==3.1.0",
    "types-python-dateutil>=2.9.0.20241206",
    "isodate==0.7.2",
    "nest-asyncio==1.6.0",
    "smbprotocol==1.15.0",
    "httpx==0.28.1",
    "databricks-labs-dqx==0.3.0",
    "sphinx==8.1.3",
    "sphinx-autoapi==3.6.0",
    "furo==2024.8.6",
    "databricks-connect~=16.4.0",
    "ipython~=8.37.0"
]
